<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reader"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/reader" />
        <item
            android:id="@+id/nav_mysite"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/my_site" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/application">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/exit" />
        </menu>
    </item>

</menu>
